style: fix alignment and gapping between elements

--- a/src/Styles/CountryDetails.css
+++ b/src/Styles/CountryDetails.css
@@ -74,11 +74,16 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 8px 0;
     letter-spacing: .5px;
+}
+.country-border p {
+    margin: 8px 8px 8px 0;
 }
 .country-border-name {
     padding: 6px 10px;
-    margin: 0 5px;
+    margin: 0 8px 0 0;
     color: var(--text-color);
     background-color: var(--nav-bg-color);
     box-shadow: 2px 2px 2px var(--btn-hover), -2px -2px 2px var(--btn-hover), 2px -2px 2px var(--btn-hover), -2px 2px 2px var(--btn-hover);
